--- a/index.html
+++ b/index.html
@@ -3,6 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- SEO Meta Tags -->
+    <title>Online Timer - Interactive Digital Countdown Timer</title>
+    <meta name="description" content="A sleek, interactive digital countdown timer with drag-and-drop functionality. Perfect for cooking, workouts, presentations, and time management.">
+    <meta name="keywords" content="countdown timer, digital timer, online timer, stopwatch, time management">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://timer.infoicy.com/">
+    <meta property="og:title" content="Online Timer - Interactive Digital Countdown Timer">
+    <meta property="og:description" content="A sleek, interactive digital countdown timer with drag-and-drop functionality. Perfect for cooking, workouts, presentations, and time management.">
+    <meta property="og:image" content="/social-share.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://timer.infoicy.com/">
+    <meta property="twitter:title" content="Online Timer - Interactive Digital Countdown Timer">
+    <meta property="twitter:description" content="A sleek, interactive digital countdown timer with drag-and-drop functionality. Perfect for cooking, workouts, presentations, and time management.">
+    <meta property="twitter:image" content="/social-share.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="mask-icon" href="/favicon.svg" color="#1a1a1a">
+
     <title>Slot Timer</title>
     <style>
         body {
